Improve the responsiveness

--- a/services.html
+++ b/services.html
@@ -10,6 +10,13 @@
   <body>
     <div class="container" id="main">
       <div class="row d-flex justify-content-center">
+        <div class="main-col3">
+          <h1>Restaurant</h1>
+          <p>
+            Visit our restaurant and try out over 100 dishes from different
+            countries each with different styles and taste.
+          </p>
+        </div>
         <div class="main-col1">
           <img src="./assets/Porsche_Restaurant_3561 1.png" alt="" />
         </div>
@@ -19,24 +26,11 @@
             alt=""
           />
         </div>
-        <div class="main-col3">
-          <h1>Restaurant</h1>
-          <p>
-            Visit our restaurant and try out over 100 dishes from different
-            countries each with different styles and taste.
-          </p>
-        </div>
       </div>
     </div>
 
     <div class="container" id="gym">
       <div class="row d-flex justify-content-center">
-        <div class="gym-col1">
-          <!-- <img src="./assets//gym-fitness-center.png" alt="" /> -->
-        </div>
-        <div class="gym-col2">
-          <img src="./assets/Gym-Wallpaper-Gallery.png" alt="" />
-        </div>
         <div class="gym-col3">
           <h1>Gym</h1>
           <p>
@@ -44,47 +38,54 @@
             work-outs and after a day of work you can exercise here.
           </p>
         </div>
+        <div class="gym-col1">
+          <!-- <img src="./assets//gym-fitness-center.png" alt="" /> -->
+        </div>
+        <div class="gym-col2">
+          <img src="./assets/Gym-Wallpaper-Gallery.png" alt="" />
+        </div>
       </div>
     </div>
 
     <div class="container" id="pool">
       <div class="row d-flex justify-content-center">
-        <div class="pool-col1">
-          <img src="./assets/OIP (3) 1.png" alt="" />
-        </div>
-        <div class="pool-col2">
-          <img src="./assets/3-1 1.png" alt="" />
-        </div>
         <div class="pool-col3">
           <h1>Pool</h1>
           <p>
             We offer the most breath taking pools.
           </p>
         </div>
+        <div class="pool-col1">
+          <img src="./assets/OIP (3) 1.png" alt="" />
+        </div>
+        <div class="pool-col2">
+          <img src="./assets/3-1 1.png" alt="" />
+        </div>
       </div>
     </div>
 
     <div class="container" id="breakfast">
       <div class="row d-flex justify-content-center">
-        <div class="breakfast-col1">
-          <h1 style="font-weight: bold; text-align: right;">
+        <div class="breakfast-col3 text-center">
+          <h1 class="d-sm-block d-md-block d-lg-none">
             Ordered Breakfast
           </h1>
-          <img
-            class="my-2 py-3"
-            src="./assets/Breakfast-at-aqua-shard 1.png"
-            alt=""
-          />
-        </div>
-        <div class="breakfast-col2">
-          <img src="./assets/24 1.png" alt="" />
-        </div>
-
-        <div class="breakfast-col3">
           <p>
             Our hotel doesn’t just serve you in the restaurant but also at your
             comfort.
           </p>
+        </div>
+        <div class="breakfast-col1">
+          <h1
+            style="font-weight: bold; text-align: right;"
+            class="d-sm-none d-md-none d-lg-block"
+          >
+            Ordered Breakfast
+          </h1>
+          <img src="./assets/Breakfast-at-aqua-shard 1.png" alt="" />
+        </div>
+        <div class="breakfast-col2">
+          <img src="./assets/24 1.png" alt="" />
         </div>
       </div>
     </div>
