Improve the responsiveness

--- a/services.html
+++ b/services.html
@@ -18,7 +18,51 @@
           </p>
         </div>
         <div class="main-col1">
-          <img src="./assets/Porsche_Restaurant_3561 1.png" alt="" />
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="1"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="2"
+              ></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+              <!-- Slide One - Set the background image for this slide in the line below -->
+              <div
+                class="carousel-item active"
+                style="
+                  background-image: url('/assets/Porsche_Restaurant_3561 1.png');
+                "
+              ></div>
+              <!-- Slide Two - Set the background image for this slide in the line below -->
+              <div
+                class="carousel-item"
+                style="
+                  background-image: url('/assets/Porsche_Restaurant_3561 1.png');
+                "
+              ></div>
+              <!-- Slide Three - Set the background image for this slide in the line below -->
+              <div
+                class="carousel-item"
+                style="
+                  background-image: url('/assets/Porsche_Restaurant_3561 1.png');
+                "
+              ></div>
+            </div>
+          </div>
+          <!-- <img src="./assets/Porsche_Restaurant_3561 1.png" alt="" /> -->
         </div>
         <div class="main-col2">
           <img
