Made some typo mistakes

--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
           <h1>Restaurant</h1>
           <p>
             Visit our restaurant and try out over 100 dishes from different
-            countries each with different styles and taste.
+            countries, each with different styles and taste.
           </p>
         </div>
         <div class="main-col1">
@@ -78,7 +78,7 @@
         <div class="gym-col3">
           <h1>Gym</h1>
           <p>
-            With strenght training equipments you can easily keep up with your
+            With strength training equipments, you can easily keep up with your
             work-outs and after a day of work you can exercise here.
           </p>
         </div>
@@ -96,7 +96,7 @@
         <div class="pool-col3">
           <h1>Pool</h1>
           <p>
-            We offer the most breath taking pools.
+            We offer the most breathtaking pools.
           </p>
         </div>
         <div class="pool-col1">
